<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>dk.medcom.video.api</groupId>
	<artifactId>medcom-video-api</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.7</version>
	</parent>

	<properties>
		<java.version>21</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<testcontainers.version>1.19.7</testcontainers.version>
		<spring-prometheus-app-info-version>2.0.3</spring-prometheus-app-info-version>
		<spring-request-id-logger-version>2.0.0</spring-request-id-logger-version>
		<shed-lock-version>5.5.0</shed-lock-version>
	</properties>
	<dependencies>
		<!-- Test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<!-- Modules in project -->
			<dependency>
				<groupId>dk.medcom.video.api</groupId>
				<artifactId>documentation</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.medcom.video.api</groupId>
				<artifactId>medcom-video-api-interface</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.medcom.video.api</groupId>
				<artifactId>medcom-video-api-service</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.medcom.video.api</groupId>
				<artifactId>medcom-video-api-web</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.medcom.video.api</groupId>
				<artifactId>medcom-video-api-test</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.medcom.video.api</groupId>
				<artifactId>medcom-video-api-qa</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Testcontainers -->
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>mockserver</artifactId>
				<version>${testcontainers.version}</version>
			</dependency>

			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>mariadb</artifactId>
				<version>${testcontainers.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mock-server</groupId>
				<artifactId>mockserver-client-java</artifactId>
				<version>5.15.0</version>
			</dependency>

			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.16.1</version>
			</dependency>

			<!-- Flyway -->
			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-core</artifactId>
				<version>10.22.0</version>
			</dependency>

			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-mysql</artifactId>
				<version>10.22.0</version>
			</dependency>

			<!-- Request ID logger -->
			<dependency>
				<groupId>dk.kvalitetsit</groupId>
				<artifactId>spring-request-id-logger</artifactId>
				<version>${spring-request-id-logger-version}</version>
			</dependency>

			<!-- Actuator and prometheus -->
			<dependency>
				<groupId>dk.kvalitetsit</groupId>
				<artifactId>spring-prometheus-app-info</artifactId>
				<version>${spring-prometheus-app-info-version}</version>
			</dependency>

			<dependency>
				<groupId>org.glassfish.jersey</groupId>
				<artifactId>jersey-bom</artifactId>
				<version>3.1.6</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Audit logging -->
			<dependency>
				<groupId>dk.kvalitetsit</groupId>
				<artifactId>audit-api</artifactId>
				<version>2.0.2</version>
			</dependency>

			<!-- Nats driver -->
			<dependency>
				<groupId>io.nats</groupId>
				<artifactId>jnats</artifactId>
				<version>2.17.3</version>
			</dependency>

			<!-- Task locking -->
			<dependency>
				<groupId>net.javacrumbs.shedlock</groupId>
				<artifactId>shedlock-spring</artifactId>
				<version>${shed-lock-version}</version>
			</dependency>

			<dependency>
				<groupId>net.javacrumbs.shedlock</groupId>
				<artifactId>shedlock-provider-jdbc-template</artifactId>
				<version>${shed-lock-version}</version>
			</dependency>

			<!-- Logback -->
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>8.0</version>
				<scope>runtime</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>4.9.10</version>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<prefix>git</prefix>
					<dateFormat>dd.MM.yyyy '@' HH:mm:ss z</dateFormat>
					<verbose>true</verbose>
					<useNativeGit>false</useNativeGit>
					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
					<skipPoms>false</skipPoms>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>target/classes/git.properties</generateGitPropertiesFilename>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<abbrevLength>7</abbrevLength>
					<skip>false</skip>
					<gitDescribe>
						<skip>false</skip>
						<always>false</always>
						<dirty>-dirty</dirty>
						<forceLongFormat>false</forceLongFormat>
					</gitDescribe>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.11</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
		</plugins>
	</build>
	<modules>
        <module>documentation</module>
		<module>medcom-video-api-interface</module>
		<module>medcom-video-api-service</module>
		<module>medcom-video-api-web</module>
		<module>medcom-video-api-test</module>
		<module>medcom-video-api-qa</module>
	</modules>
</project>
